test/src/e2e_vm_tests/test_programs/should_pass/language/main_args/main_args_various_types/src/types.sw
library;

pub struct S {
    pub v: u64
}